fix(car-slider): increase column gap for logos in larger screens

--- a/src/app/features/home/components/car-slider-section/car-slider-section.css
+++ b/src/app/features/home/components/car-slider-section/car-slider-section.css
@@ -66,7 +66,7 @@
 
 @media (width >= 1280px) {
   .cars-logos {
-    column-gap: 8rem;
+    column-gap: 10rem;
   }
 
   .logo {
